--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -1,5 +1,6 @@
 
 .form {
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   .headline--secondary {
