--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -5,6 +5,12 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    margin: 54px auto 50px auto;
+  }
+  @media (min-width: map-get($breakpoints, "lg")) {
+    align-items: flex-start;
+    justify-content: normal;
+    width: 415px;
   }
   &__item {
     a {
@@ -20,6 +26,9 @@
       @media (min-width: map-get($breakpoints, "med")) {
         width: auto;
         padding: 10px;
+      }
+      @media (min-width: map-get($breakpoints, "lg")) {
+        margin-right: 30px;
       }
     }
   }
